--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "firebase-admin": "^11.5.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^6.9.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
